fix crappy overlap on back

--- a/code/UI/MenuSystem/BrowseCustomGames.razor.scss
+++ b/code/UI/MenuSystem/BrowseCustomGames.razor.scss
@@ -6,7 +6,7 @@
         margin-top: 24px;
         margin-left: $menu-paddingpx;
         margin-bottom: 32px;
-        display: flex;
+        flex: 0 0 auto;
     }
 
     .game-browser {
